--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -3,32 +3,36 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Adjust if your default branch is different
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - name: Set up Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
-      - name: Install Dependencies
+      # 1) Change into your roomiehopie folder to install and build
+      - name: Install dependencies
         run: npm install
+        working-directory: roomiehopie
 
       - name: Build and Export
         run: |
           npm run build
           npm run export
+        working-directory: roomiehopie
 
+      # 2) Deploy the 'roomiehopie/out' folder
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          publish_dir: roomiehopie/out
           publish_branch: gh-pages
