--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # Grant write permissions to allow pushing to the gh-pages branch.
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -34,4 +38,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./RoomieHopie/out
+          # Ensure the directory name matches your project exactly (case sensitive)
+          publish_dir: ./roomiehopie/out
