--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-
 name: Deploy Next.js site to Pages
 
 on:
@@ -26,16 +24,15 @@ jobs:
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+          cd roomiehopie
+          if [ -f yarn.lock ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
+          elif [ -f package.json ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
           else
             echo "Unable to determine package manager"
             exit 1
@@ -55,27 +52,23 @@ jobs:
       - name: Restore cache
         uses: actions/cache@v4
         with:
-          path: |
-            .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          path: .next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json', '**/roomiehopie/yarn.lock') }}-${{ hashFiles('**/roomiehopie/**/*.[jt]s', '**/roomiehopie/**/*.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json', '**/roomiehopie/yarn.lock') }}-
 
       - name: Install dependencies
+        working-directory: roomiehopie
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Build with Next.js
+        working-directory: roomiehopie
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
-
-      # If you need to export static HTML (for GitHub Pages), run next export:
-      # - name: Export static HTML
-      #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Change this to point to your built site directory.
-          path: ./roomiehopie
+          path: roomiehopie
 
   deploy:
     environment:
