--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,7 @@ jobs:
         id: detect-package-manager
         run: |
           cd roomiehopie
-          if [ -f yarn.lock ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-          elif [ -f package.json ]; then
+          if [ -f package.json ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
@@ -53,9 +49,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json', '**/roomiehopie/yarn.lock') }}-${{ hashFiles('**/roomiehopie/**/*.[jt]s', '**/roomiehopie/**/*.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json') }}-${{ hashFiles('**/roomiehopie/**/*.[jt]s', '**/roomiehopie/**/*.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json', '**/roomiehopie/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json') }}-
 
       - name: Install dependencies
         working-directory: roomiehopie
