--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,11 @@ jobs:
       - name: Restore cache
         uses: actions/cache@v4
         with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json') }}-${{ hashFiles('**/roomiehopie/**/*.[jt]s', '**/roomiehopie/**/*.[jt]sx') }}
+          path: roomiehopie/.next/cache
+          # Use explicit paths relative to the repository root.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('roomiehopie/package-lock.json') }}-${{ hashFiles('roomiehopie/**/*.[jt]s', 'roomiehopie/**/*.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/roomiehopie/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('roomiehopie/package-lock.json') }}-
 
       - name: Install dependencies
         working-directory: roomiehopie
