--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,64 +1,34 @@
-name: Deploy Next.js Site to GitHub Pages
+name: Deploy Next.js site to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: "20"
-          cache: npm
-          # Use the package-lock.json inside roomiehopie for caching:
-          cache-dependency-path: roomiehopie/package-lock.json
+          node-version: '20'
 
       - name: Install dependencies
-        working-directory: roomiehopie
-        run: npm ci
+        working-directory: ./roomiehopie
+        run: npm install
 
-      - name: Build Next.js app
-        working-directory: roomiehopie
-        run: npx next build
-
-      - name: Export Next.js app to static HTML
-        working-directory: roomiehopie
-        run: npx next export -o ../out
-
-      - name: Create .nojekyll file in export directory
-        run: touch out/.nojekyll
-
-      - name: Upload artifact for deployment
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: out
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Download artifact
-        uses: actions/download-pages-artifact@v3
+      - name: Build and Export
+        working-directory: ./roomiehopie
+        run: |
+          npm run build
+          npm run export
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./roomiehopie/out
