--- a/roomiehopie/package.json
+++ b/roomiehopie/package.json
@@ -2,6 +2,7 @@
   "name": "roomiehopie",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -14,7 +15,7 @@
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "passport": "^0.7.0",
-    "passport-cas": "^0.1.1",
+    "passport-cas": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
