--- a/roomiehopie/tsconfig.json
+++ b/roomiehopie/tsconfig.json
@@ -1,16 +1,11 @@
 {
   "compilerOptions": {
-<<<<<<< Updated upstream
     "target": "ES2017",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-=======
-    "target": "esnext",
-    "lib": ["dom", "dom.iterable", "esnext"],
->>>>>>> Stashed changes
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -33,19 +28,13 @@
       ]
     }
   },
-<<<<<<< Updated upstream
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "next.config.js"  ],
   "exclude": [
     "node_modules"
   ]
-=======
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src"],
-  "exclude": ["node_modules", ".next"]
-  
->>>>>>> Stashed changes
 }
