--- a/roomiehopie/package.json
+++ b/roomiehopie/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.24.11",
     "passport": "^0.7.0",
     "passport-cas": "^0.0.3",
+    "preact": "^10.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
