--- a/roomiehopie/package.json
+++ b/roomiehopie/package.json
@@ -12,6 +12,7 @@
     "deploy": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "passport": "^0.7.0",
