--- a/roomiehopie/tsconfig.json
+++ b/roomiehopie/tsconfig.json
@@ -32,7 +32,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/app/api/auth/[...nextauth]/route.ts" // Explicitly include the route.ts file if necessary
 , "next.config.js"  ],
   "exclude": [
     "node_modules"
